--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -4,6 +4,11 @@
   functions = "netlify/functions"
 
 [[redirects]]
+  from = "/api/truthordare/*"
+  to = "https://api.truthordarebot.xyz/v1/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
